# tinyasr

./: .gitignore  README.md  dataset_size.py  demo.py  inference.py  pyproject.toml  tinyasr.model  tinyasr.vocab  tokenizer_data.py  tokenizer_train.py
configs/: base-bpe-from-pretrained.yaml  base-bpe-text-pretrain.yaml  base-bpe.yaml  base-cfg.yaml  base.yaml  small-bpe-from-pretrained.yaml  small-bpe-text-pretrain.yaml  small-bpe.yaml  small.yaml
hacking/: hf-streaming-datasets.py
notebooks/: data.ipynb
scripts/: README.md  demo.py  foo.py  inference.py  metrics.py  run_speech_recognition_seq2seq.py  stats.py  stream.py  tokenizer_test.py  tokenizer_train.py
src/tinyasr/: audio.py  config.py  data.py  model.py  pretrain.py  text.py  train.py  utils.py
