[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyasr"

version = "0.1.0"

description = "A tiny and hackable ASR system"

requires-python = ">=3.10"

dependencies = [
    "click",
    "einops",
    "gradio",
    "jiwer",
    "matplotlib",
    "nltk",
    "numpy",
    "pandas",
    "pydantic",
    "sentencepiece",
    "torch",
    "torchaudio",
    "torchdata",
    "wandb",
    # data
    "datasets",
    "soundfile",
    "librosa",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "tinyasr.__version__" }
