[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyasr"
description = "A tiny and hackable ASR system"
requires-python = ">=3.11"
dependencies = [
    "click",
    "einops",
    "gradio",
    "matplotlib",
    "numpy",
    "pandas",
    "pydantic",
    "torch",
    "torchaudio",
    "wandb",
    # data
    "datasets",
    "soundfile",
    "librosa",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["ipykernel"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "tinyasr.__version__" }
